# file-grouper-cli

./: README.md
via_setup_cfg/: setup.cfg
via_setup_cfg/figro/: CONFIG.py  README.md  common.py
via_setup_py/: MANIFEST.in  setup.py
via_setup_py/figro/: core.py  figro.py
