[metadata]
name = figro
version = 0.1.0
author = Dmytro Tarasiuk
author_email = RoyBebru@Gmail.Com
url =  https://github.com/RoyBebru/file-grouper-figro
description = CLI varianf of the fig utility
long_description = file: README.md
long_description_content_type = text/markdown
keywords = figro, setuptools
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True

[options.package_data]
# figro = locale/uk/LC_MESSAGES/*.mo
* = README.md

[options.entry_points]
console_scripts =
    figro = figro.figro:main
